reporte commissions transaction
