# src/main/java/com/sgi/transaction/domain/ports/out/TransactionRepository.java
@@ -5,6 +5,8 @@ import com.sgi.transaction.infrastructure.dto.TransactionResponse;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
+import java.time.LocalDate;
+
 /**
  * Interface that defines the contract for transaction repository operations.
  * This repository handles operations related to transactions, such as saving,
@@ -12,42 +14,16 @@ import reactor.core.publisher.Mono;
  */
 public interface TransactionRepository {
 
-    /**
-     * Saves a transaction and returns the corresponding response.
-     *
-     * @param transaction the transaction to save
-     * @return a Mono emitting the transaction response upon completion
-     */
     Mono<TransactionResponse> save(Transaction transaction);
 
-    /**
-     * Finds a transaction by its ID.
-     *
-     * @param id the ID of the transaction to find
-     * @return a Mono emitting the found transaction, or empty if not found
-     */
     Mono<Transaction> findById(String id);
 
-    /**
-     * Retrieves all transactions.
-     *
-     * @return a Flux emitting all transaction responses
-     */
     Flux<TransactionResponse> findAll();
 
-    /**
-     * Deletes a specified transaction.
-     *
-     * @param transaction the transaction to delete
-     * @return a Mono that completes upon successful deletion
-     */
     Mono<Void> delete(Transaction transaction);
 
-    /**
-     * Retrieves all transactions associated with a specific account ID.
-     *
-     * @param accountId the ID of the account
-     * @return a Flux emitting transaction responses related to the account ID
-     */
     Flux<TransactionResponse> getTransactionsByAccountId(String accountId);
+
+    Flux<TransactionResponse> getCommissionsByProductAndPeriod(String productId, LocalDate startDate, LocalDate endDate);
+
 }
